force-app/main/default/objects/Account/fields/test_merge_2__c.field-meta.xml
<CustomField>
    <fullName>test_merge_2__c</fullName>
    <label>test merge 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>