force-app/main/default/objects/Account/fields/Test_Merge__c.field-meta.xml
<CustomField>
    <fullName>Test_Merge__c</fullName>
    <label>Test Merge</label>
    <length>80</length>
    <type>Text</type>
</CustomField>