force-app/main/default/objects/Account/fields/Test_SFDX_Hardis__c.field-meta.xml
<CustomField>
    <fullName>Test_SFDX_Hardis__c</fullName>
    <label>Test SFDX-Hardis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>