force-app/main/default/objects/Account/fields/Test_SFDX_Hardis_v1__c.field-meta.xml
<CustomField>
    <fullName>Test_SFDX_Hardis_v1__c</fullName>
    <label>Test SFDX-Hardis v1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>