force-app/main/default/objects/Account/fields/Test_SFDX_Hardis_v2__c.field-meta.xml
<CustomField>
    <fullName>Test_SFDX_Hardis_v2__c</fullName>
    <label>Test SFDX-Hardis v2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>